# bili-live-chat

./: Cargo.toml  README.md  README_en.md
examples/: application.rs  bili_client_request.rs  danmu_client.rs  endian.rs  tui_demo.rs
fixtures/: test_config_serde.yml
src/: app.rs  config.rs  lib.rs  main.rs  message.rs  utils.rs
src/api/: live.rs
src/client/: account.rs  api.rs  danmu_client.rs  mod.rs
src/network/: credential.rs  mod.rs  request.rs
src/ui/: ui.rs
