[package]
name = "bili-live-chat"
version = "0.1.0"
edition = "2021"

[[example]]
name = "bili_client_request"
path = "examples/bili_client_request.rs"

[[example]]
name = "danmu_client"
path = "examples/danmu_client.rs"

[[example]]
name = "endian"
path = "examples/endian.rs"

[[example]]
name = "application"
path = "examples/application.rs"

[dependencies]
bytes = { version = "1.3.0", features = ["serde"] }
flate2 = "1.0.25"
futures = "0.3.25"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.23.0", features = ["full"] }
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
