[package]
name = "bili-live-chat"
version = "0.1.0"
edition = "2021"

[[example]]
name = "bili_client_request"
path = "examples/bili_client_request.rs"

[[example]]
name = "danmu_client"
path = "examples/danmu_client.rs"

[[example]]
name = "endian"
path = "examples/endian.rs"

[[example]]
name = "application"
path = "examples/application.rs"

[[example]]
name = "tui_demo"
path = "examples/tui_demo.rs"

[dependencies]
chrono = "0.4.23"
clap = { version = "4.1.1", features = ["cargo"] }
crossterm = "0.25.0"
flate2 = "1.0.25"
futures = "0.3.25"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_yaml = "0.9.17"
tokio = { version = "1.23.0", features = ["full"] }
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
tui = "0.19.0"
unicode-width = "0.1.10"
